@startuml
left to right direction
Biblioteca "1" *-- "n" Libro : contiene
Biblioteca <|-- Paiba
Biblioteca <|-- Artes
Biblioteca <|-- Ingenieria
Libro -- Usuario
class Libro{
    nombre
    autor
    biblioteca
    prestado : bool
    poseedor
    asignar_biblioteca()
    asignar_nombre()
    asignar_autor()
    agregar_poseedor()
    entregar_biblioteca()
    entregar_nombre()
    entregar_autor()
    entregar_estado()
    entregar_poseedor()
    cambiar_estado()
    mostrar_info()
}

class Biblioteca{
    nombre
    libros
    txt
    buscador
    leer_libros()
    actualizar_biblioteca()
}

Usuario <|-- Admin
Usuario <|-- Estudiante
Usuario <|-- Docente
class Usuario{
    cargo
    sede
    carrera
    nombre
    documento
    asignar_sede()
    asignar_carrera()
    asignar_nombre()
    asignar_documento()
    asignar_cargo()
    entregar_cargo()
    entregar_sede()
    entregar_carrera()
    entregar_nombre()
    entregar_documento()
    leer_sede()
    leer_carrera()
    leer_nombre()
    leer_documento()
    llenar_usuario()
    mostrar_info()
}

Biblioteca "1" *-- "1" BuscadorLibros:contiene
SistemaBibliotecas "1" *-- "1" Usuario:contiene
SistemaBibliotecas "1" *-- "n" Biblioteca:contiene
class BuscadorLibros{
    librosEncontrados
    por_autor(Biblioteca, autor)
    por_nombre(Biblioteca, nombre)
    por_biblioteca(Biblioteca)
    limpiar_librosEncontrados()
    entregar_librosEncontrados()
}

class SistemaBibliotecas{
    Librerias
    Usuario
    iniciar_sesion()
}
@enduml